--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         function openTest(testId) {
             if (testId === 'night-snack') {
                 // 실제 야식 테스트 페이지로 이동
-                window.open('야식테스트.html', '_blank');
+                window.open('night-snack.html', '_blank');
             } else {
                 alert(`${getTestName(testId)} 준비 중입니다!`);
             }
