--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         function openTest(testId) {
             if (testId === 'night-snack') {
                 // 실제 야식 테스트 페이지로 이동
-                window.open('night-snack.html', '_blank');
+                window.open('test-night-snack.html', '_blank');
             } else {
                 alert(`${getTestName(testId)} 준비 중입니다!`);
             }
@@ -527,7 +527,7 @@
         // 관리자 페이지 열기
         function openAdmin() {
             const password = prompt('관리자 비밀번호:');
-            if (password === 'admin123') {
+            if (password === 'test4214') {
                 alert('관리자 페이지로 이동합니다!');
                 // 실제로는: window.location.href = 'admin.html';
             } else if (password !== null) {
