--- a/index.html
+++ b/index.html
@@ -528,8 +528,7 @@
         function openAdmin() {
             const password = prompt('관리자 비밀번호:');
             if (password === 'test4214') {
-                alert('관리자 페이지로 이동합니다!');
-                // 실제로는: window.location.href = 'admin.html';
+                window.location.href = 'admin.html';
             } else if (password !== null) {
                 alert('비밀번호가 틀렸습니다.');
             }
